// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`HeightPopoverHeight snapshots should render HeightPopoverHeight{max} 1`] = `
<DocumentFragment>
  <div
    class="PopoverItem"
    data-test-popover-item="0"
  >
    <div
      class="css-1jnxvbp PopoverItem__check-icon PopoverItem__check-icon--selected Icon Icon--neutral-1"
      data-test-icon="check"
      height="12"
      name="Check"
      width="12"
    />
    <div
      class="css-1jnxvbp PopoverItem__icon Icon Icon--neutral-1"
      data-test-icon="max-height"
      height="12"
      name="MaxHeight"
      width="12"
    />
    <small
      class="css-1jnxvbp PopoverItem__text Typography Typography--neutral-1 Typography--regular Typography--normal Typography--small"
      data-test-text=""
      style="text-align: inherit;"
    >
      Set to current height
    </small>
  </div>
  <div
    class="PopoverItem"
    data-test-popover-item="1"
  >
    <div
      class="css-1jnxvbp PopoverItem__check-icon Icon Icon--neutral-1"
      data-test-icon="check"
      height="12"
      name="Check"
      width="12"
    />
    <div
      class="css-1jnxvbp PopoverItem__icon Icon Icon--neutral-1"
      data-test-icon="auto-height"
      height="12"
      name="AutoHeight"
      width="12"
    />
    <small
      class="css-1jnxvbp PopoverItem__text Typography Typography--neutral-1 Typography--regular Typography--normal Typography--small"
      data-test-text=""
      style="text-align: inherit;"
    >
      Auto max height
    </small>
  </div>
  <div
    class="PopoverItem"
    data-test-popover-item="2"
  >
    <div
      class="css-1jnxvbp PopoverItem__check-icon Icon Icon--neutral-1"
      data-test-icon="check"
      height="12"
      name="Check"
      width="12"
    />
    <div
      class="css-1jnxvbp PopoverItem__icon Icon Icon--neutral-1"
      data-test-icon="percentage"
      height="12"
      name="Percentage"
      width="12"
    />
    <small
      class="css-1jnxvbp PopoverItem__text Typography Typography--neutral-1 Typography--regular Typography--normal Typography--small"
      data-test-text=""
      style="text-align: inherit;"
    >
      Percentage
    </small>
  </div>
  <div
    class="PopoverItem"
    data-test-popover-item="3"
  >
    <div
      class="css-1jnxvbp PopoverItem__check-icon Icon Icon--neutral-1"
      data-test-icon="check"
      height="12"
      name="Check"
      width="12"
    />
    <div
      class="css-1jnxvbp PopoverItem__icon Icon Icon--neutral-1"
      data-test-icon="close"
      height="12"
      name="Close"
      width="12"
    />
    <small
      class="css-1jnxvbp PopoverItem__text Typography Typography--neutral-1 Typography--regular Typography--normal Typography--small"
      data-test-text=""
      style="text-align: inherit;"
    >
      Remove max height
    </small>
  </div>
</DocumentFragment>
`;

exports[`HeightPopoverHeight snapshots should render HeightPopoverHeight{min} 1`] = `
<DocumentFragment>
  <div
    class="PopoverItem"
    data-test-popover-item="0"
  >
    <div
      class="css-1jnxvbp PopoverItem__check-icon PopoverItem__check-icon--selected Icon Icon--neutral-1"
      data-test-icon="check"
      height="12"
      name="Check"
      width="12"
    />
    <div
      class="css-1jnxvbp PopoverItem__icon Icon Icon--neutral-1"
      data-test-icon="min-height"
      height="12"
      name="MinHeight"
      width="12"
    />
    <small
      class="css-1jnxvbp PopoverItem__text Typography Typography--neutral-1 Typography--regular Typography--normal Typography--small"
      data-test-text=""
      style="text-align: inherit;"
    >
      Set to current height
    </small>
  </div>
  <div
    class="PopoverItem"
    data-test-popover-item="1"
  >
    <div
      class="css-1jnxvbp PopoverItem__check-icon Icon Icon--neutral-1"
      data-test-icon="check"
      height="12"
      name="Check"
      width="12"
    />
    <div
      class="css-1jnxvbp PopoverItem__icon Icon Icon--neutral-1"
      data-test-icon="auto-height"
      height="12"
      name="AutoHeight"
      width="12"
    />
    <small
      class="css-1jnxvbp PopoverItem__text Typography Typography--neutral-1 Typography--regular Typography--normal Typography--small"
      data-test-text=""
      style="text-align: inherit;"
    >
      Auto min height
    </small>
  </div>
  <div
    class="PopoverItem"
    data-test-popover-item="2"
  >
    <div
      class="css-1jnxvbp PopoverItem__check-icon Icon Icon--neutral-1"
      data-test-icon="check"
      height="12"
      name="Check"
      width="12"
    />
    <div
      class="css-1jnxvbp PopoverItem__icon Icon Icon--neutral-1"
      data-test-icon="percentage"
      height="12"
      name="Percentage"
      width="12"
    />
    <small
      class="css-1jnxvbp PopoverItem__text Typography Typography--neutral-1 Typography--regular Typography--normal Typography--small"
      data-test-text=""
      style="text-align: inherit;"
    >
      Percentage
    </small>
  </div>
  <div
    class="PopoverItem"
    data-test-popover-item="3"
  >
    <div
      class="css-1jnxvbp PopoverItem__check-icon Icon Icon--neutral-1"
      data-test-icon="check"
      height="12"
      name="Check"
      width="12"
    />
    <div
      class="css-1jnxvbp PopoverItem__icon Icon Icon--neutral-1"
      data-test-icon="close"
      height="12"
      name="Close"
      width="12"
    />
    <small
      class="css-1jnxvbp PopoverItem__text Typography Typography--neutral-1 Typography--regular Typography--normal Typography--small"
      data-test-text=""
      style="text-align: inherit;"
    >
      Remove min height
    </small>
  </div>
</DocumentFragment>
`;
